@@ -1,3 +1,12 @@
+2018-03-22  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/85040
+	* include/bits/stl_function.h (greater::__not_overloaded)
+	(less::__not_overloaded, greater_equal::__not_overloaded)
+	(less_equal::__not_overloaded): Fix ambiguous specializations.
+	* testsuite/20_util/function_objects/comparisons_pointer.cc: Add
+	tests for type with overlaoded operators.
+
 2018-03-22  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
 
 	PR libstdc++/77691
